Set attribute: Fix items display

--- a/css/backoffice/components/input/_all.scss
+++ b/css/backoffice/components/input/_all.scss
@@ -12,5 +12,5 @@
 @import "input-select";
 @import "input-select-icon";
 @import "input-string";
-@import "input-tagset";
+@import "input-set";
 @import "input-textarea";
