--- a/templates/base/layouts/dashboard/column/layout.html.twig
+++ b/templates/base/layouts/dashboard/column/layout.html.twig
@@ -12,6 +12,7 @@
         {% set sCellClass = "dashboard" %}
     {% endif %}
     <div class="ibo-dashboard--grid-column ibo-dashboard--grid-cell {{ sCellClass }}"
+         data-role="ibo-dashboard--grid-cell"
          data-dashboard-grid-column-index="{{ oUIBlock.GetColumnIndex() }}"
          data-dashboard-grid-cell-index="{{ oUIBlock.GetCellIndex() }}">
         {% for oSubBlock in oUIBlock.GetSubBlocks() %}
