N°3536 - Dashboard: Finish integration of in the TopBar

--- a/css/backoffice/components/_toolbar.scss
+++ b/css/backoffice/components/_toolbar.scss
@@ -6,6 +6,9 @@
 $ibo-toolbar--button-margin-top: 16px !default;
 
 .ibo-toolbar {
+  display: flex;
+  align-items: center;
+
   &.ibo-toolbar--action {
     position: relative;
   }
