--- a/css/backoffice/layout/_top-bar.scss
+++ b/css/backoffice/layout/_top-bar.scss
@@ -77,26 +77,33 @@ $ibo-top-bar--quick-actions--margin-right: $ibo-top-bar--elements-spacing !defau
 }
 
 .ibo-top-bar--toolbar-dashboard-selector {
-	@extend %ibo-full-height-content;
-	display: flex;
-	align-items: center;
+  @extend %ibo-full-height-content;
+  display: flex;
+  align-items: center;
+  margin-left: 12px;
+  margin-right: 1px;
 
-	.selector-label {
-		display: inline-block;
-		margin-left: 10px;
-		margin-right: 10px;
-		vertical-align: super;
-	}
+  &:hover {
+    background-color: $ibo-color-secondary-100;
+    border-radius: $ibo-button--border-radius;
+  }
+
+  .selector-label {
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+    vertical-align: super;
+  }
 }
 
 // Round Toggle
 /* The switch - the box around the slider */
 .switch {
-	position: relative;
-	display: inline-block;
-	width: 36px;
-	height: 20px;
-	vertical-align: baseline;
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 24px;
+  vertical-align: baseline;
 }
 
 /* Hide default HTML checkbox */
@@ -106,44 +113,41 @@ $ibo-top-bar--quick-actions--margin-right: $ibo-top-bar--elements-spacing !defau
 
 /* The slider */
 .slider {
-	position: absolute;
-	cursor: pointer;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color: $ibo-color-secondary-600;
-	transition: .4s;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .slider:before {
-	position: absolute;
-	content: "";
-	height: 15px;
-	width: 15px;
-	left: 3px;
-	bottom: 3px;
-	background-color: $ibo-color-secondary-300;
-	transition: .4s;
+  position: absolute;
+  right: 5px;
+  bottom: 2px;
+  color: $ibo-color-secondary-800;
+  content: "\f007";
+  font-family: "Font Awesome 5 Free", serif;
+  font-size: $ibo-font-size-100;
+  font-weight: 900;
 }
 
-input:checked + .slider {
-	background-color: $ibo-color-primary-600;
-}
-
-input:focus + .slider {
-	box-shadow: 0 0 1px $ibo-color-primary-600;
+.slider:after {
+  position: absolute;
+  left: 5px;
+  bottom: 1px;
+  color: $ibo-color-primary-600;
+  content: "\f1ad";
+  font-family: "Font Awesome 5 Free", serif;
+  font-size: $ibo-font-size-150;
+  font-weight: 900;
 }
 
 input:checked + .slider:before {
-	transform: translateX(14.5px);
+  content: "\f1ad";
 }
 
-/* Rounded sliders */
-.slider.round {
-	border-radius: 20px;
+input:checked + .slider:after {
+  content: "\f007";
 }
 
-.slider.round:before {
-	border-radius: 7px;
-}
