Object details: Fix object class displayed as code instead of label

--- a/templates/base/layouts/object/object-details/layout.html.twig
+++ b/templates/base/layouts/object/object-details/layout.html.twig
@@ -15,6 +15,6 @@
             <span class="ibo-object-details--status-label">{{ oUIBlock.GetStatusLabel() }}</span>
         </span>
     {% endif %}
-    <span class="ibo-object-details--object-class">{{ oUIBlock.GetClassName() }}</span>
+    <span class="ibo-object-details--object-class">{{ oUIBlock.GetClassLabel() }}</span>
     {{ parent() }}
 {% endblock %}
