N°3581 - Dashlet: Rename Badge block to Pill as it can contain just a simple text and to avoid confusion with the DashletBadge

--- a/css/backoffice/components/_all.scss
+++ b/css/backoffice/components/_all.scss
@@ -4,7 +4,6 @@
  */
 
 @import "alert";
-@import "badge";
 @import "button";
 @import "breadcrumbs";
 @import "collapsible-section";
@@ -17,6 +16,7 @@
 @import "modal";
 @import "dashlet/all";
 @import "input/all";
+@import "pill";
 @import "prop";
 
 @import "title";
