N°3581 - Panel: Fix titles font

--- a/css/backoffice/components/_panel.scss
+++ b/css/backoffice/components/_panel.scss
@@ -176,7 +176,7 @@ $ibo-panel-colors: (
 .ibo-panel--title {
   display: inline-block;
   color: $ibo-panel--title--color;
-  @extend %ibo-font-ral-med-250;
+  @extend %ibo-font-ral-sembol-250;
   flex-grow: 1;
 }
 
